# clm_libs

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  meson.build
clm_libc/: CMakeLists.txt
clm_libc/clm_carena/: CMakeLists.txt  meson.build
clm_libc/clm_cshared/: LICENSE  clm_shared.h
clm_libc/clm_cstring/: CMakeLists.txt  make.py  meson.build
clm_libc/clm_cstring/inc/: libc.h
clm_libc/clm_ctest/: .clang-format  CMakeLists.txt  Makefile  meson.build
clm_libc/clm_ctest/include/: ctest.h
clm_libc/clm_libc_arena/: CMakeLists.txt
clm_libc/clm_libc_arena/include/: clm_arena.h
clm_libc/clm_libc_arena/src/: clm_arena.c
clm_libc/clm_libc_logging/: CMakeLists.txt
clm_libc/clm_libc_logging/include/: clm_logging.h
clm_libc/clm_libc_logging/src/: clm_logging.c
clm_libc/clm_libc_shared/include/: clm_libc_shared.h
clm_libc/clm_libc_string/: CMakeLists.txt
clm_libc/clm_libc_string/include/: clm_string.h
clm_libc/clm_libc_string/src/: clm_string.c
clm_libc/clm_libc_vector/: CMakeLists.txt
clm_libc/clm_libc_vector/include/: clm_vector.h
clm_libc/clm_libc_vector/src/: clm_vector.c
clm_libcpp/: CMakeLists.txt
clm_libcpp/clm_libcpp_alloc/: CMakeLists.txt
clm_libcpp/clm_libcpp_alloc/include/: alloc.hpp  chunk.hpp  chunk.tpp
clm_libcpp/clm_libcpp_alloc/include/allocators/: bitmapped_block.hpp  bitmapped_block.tpp  bucketizer.hpp  bucketizer.tpp  buffer_ref.hpp  buffer_ref.tpp  fallback_allocator.hpp  fallback_allocator.tpp  null_allocator.hpp  null_allocator.tpp  segregator.hpp  segregator.tpp  utils.hpp  utils.tpp
clm_libcpp/clm_libcpp_math/: CMakeLists.txt
clm_libcpp/clm_libcpp_math/include/: math.hpp
clm_libcpp/clm_libcpp_meta/: CMakeLists.txt
clm_libcpp/clm_libcpp_meta/include/: meta.hpp
clm_libcpp/clm_libcpp_shared/include/: clm_libcpp_shared.hpp
clm_libcpp/clm_libcpp_traits/: CMakeLists.txt
clm_libcpp/clm_libcpp_traits/include/: traits.hpp  traits.tpp
clm_libcpp/clm_libcpp_types/: CMakeLists.txt
clm_libcpp/clm_libcpp_types/include/: types.hpp
clm_libcpp/clm_libcpp_types/include/containers/: stack.hpp  stack.tpp  tree.hpp  tree.tpp
clm_libcpp/clm_libcpp_types/include/util/: display_buffer.hpp  display_buffer.tpp
clm_libcpp/clm_libcpp_utils/: CMakeLists.txt
clm_libcpp/clm_libcpp_utils/include/: utils-fwd.hpp  utils.hpp
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Dependencies.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
configured_files/: CMakeLists.txt  config.h.in
docs/latex/: main.tex
docs/latex/sections/: about.tex  building.tex  contributing.tex  license.tex
tools/clm_libtool/: pylintrc  pyproject.toml  run.ps1  run.sh
tools/clm_libtool/src/: clm_libtool.py
