# --------------------------------------------------------------------------- #
# Project declaration ------------------------------------------------------- #
# --------------------------------------------------------------------------- #

project(
    'clm_libs',
    ['cpp', 'c'],
    version: '0.1.0-dev',
    license: 'BSD-3-Clause',
    default_options: [
        'c_std=c17',
        'cpp_std=c++20',
        'warning_level=3',
    ]
)

# --------------------------------------------------------------------------- #
# Variables ----------------------------------------------------------------- #
# --------------------------------------------------------------------------- #

cc = meson.get_compiler('c')
cxx = meson.get_compiler('cpp')
host = host_machine.system()

# --------------------------------------------------------------------------- #
# Subprojects --------------------------------------------------------------- #
# --------------------------------------------------------------------------- #

