# --------------------------------------------------------------------------- #
# Project declaration ------------------------------------------------------- #
# --------------------------------------------------------------------------- #

project(
    'libclm_cstring',
    'c'
    version: '0.1.0-dev',
    license: 'BSD-3-Clause',
    default_options: [
        'c_std=c17',
        'warning_level=3',
    ]
)

# --------------------------------------------------------------------------- #
# Variables ----------------------------------------------------------------- #
# --------------------------------------------------------------------------- #

cc = meson.get_compiler('c')
host = host_machine.system()

include_dirs = [
    include_dirs('src')
]

sources = [
    'src/ctest.c'
]

# --------------------------------------------------------------------------- #
# Dependencies -------------------------------------------------------------- #
# --------------------------------------------------------------------------- #

deps = []

# --------------------------------------------------------------------------- #
# Library build ------------------------------------------------------------- #
# --------------------------------------------------------------------------- #

library(
    'libclm_cstring',
    sources,
    include_directories: include_dirs,
    dependencies: deps,
    c_pch: 'inc/libc.h'
)
